Add basic html function

--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
     <meta charset="utf-8">
     <title>Tic-Tac-Toe</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <aside class="player-1-area">
-
+      <h2> Wins <h2>
     </aside>
     <section>
 
     </section>
     <aside class="player-2-area">
-
+      <h2> Wins <h2>
     </aside>
   <script src="main.js"> </script>
   </body>
