Add gameboard design style

--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
   </head>
   <body>
     <aside class="player-1-area">
-      <h2> Wins <h2>
+      <h1> Player One </h1>
+      <h2> X </h2>
+      <h3> Wins </h3>
     </aside>
     <section>
-
+      <h2 class="game-data"> </h2>
+      <div class="game-board" <div>
     </section>
     <aside class="player-2-area">
-      <h2> Wins <h2>
+      <h1> Player Two </h1>
+      <h2> O </h2>
+      <h3> Wins </h3>
     </aside>
   <script src="main.js"> </script>
   </body>
