Add full styling

--- a/index.html
+++ b/index.html
@@ -13,9 +13,28 @@
       <h2> X </h2>
       <h3> Wins </h3>
     </aside>
-    <section>
-      <h2 class="game-data"> </h2>
-      <div class="game-board" <div>
+    <section class="central-section">
+      <div class="game-data-info">
+        <h2 class="game-data"> Player One, it's your turn... </h2>
+        <h2 class="game-data"> Player Two, it's your turn... </h2>
+      </div>
+      <div class="game-board">
+        <div class="row">
+          <button type="button" name="button1"></button>
+          <button type="button" name="button2"></button>
+          <button type="button" name="button3"></button>
+        </div>
+        <div class="row">
+          <button type="button" name="button4"></button>
+          <button type="button" name="button5"></button>
+          <button type="button" name="button6"></button>
+        </div>
+        <div class="row">
+          <button type="button" name="button7"></button>
+          <button type="button" name="button8"></button>
+          <button type="button" name="button9"></button>
+        </div>
+      </div>
     </section>
     <aside class="player-2-area">
       <h1> Player Two </h1>
