Add pseudocode of process

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
           <button type="button" name="button8"></button>
           <button type="button" name="button9"></button>
         </div>
+        <div class="new-game" id="new-game">New game?<div>
+          </div>
       </div>
     </section>
     <aside class="player-2-area">
