Add player icons

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     </aside>
     <section class="central-section">
       <div class="game-data-info">
-        <h2 class="game-data"> Player One, it's your turn... </h2>
-        <h2 class="game-data"> Player Two, it's your turn... </h2>
+        <h2 class="game-data1 hidden"> Player One, it's your turn... </h2>
+        <h2 class="game-data2 hidden"> Player Two, it's your turn... </h2>
       </div>
       <div class="game-board">
         <div class="row">
-          <button type="button" name="button1"></button>
+          <button type="button" name="button1" id="game-button"></button>
           <button type="button" name="button2"></button>
           <button type="button" name="button3"></button>
         </div>
@@ -35,7 +35,7 @@
           <button type="button" name="button9"></button>
         </div>
         <div class="new-game" id="new-game">New game?<div>
-          </div>
+        </div>
       </div>
     </section>
     <aside class="player-2-area">
