Add player class. Add game methods

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <aside class="player-1-area">
       <h1> Player One </h1>
       <h2> X </h2>
-      <h3> Wins </h3>
+      <h3> # Wins </h3>
     </aside>
     <section class="central-section">
       <div class="game-data-info">
@@ -20,19 +20,19 @@
       </div>
       <div class="game-board">
         <div class="row">
-          <button type="button" name="button1" id="game-button"></button>
-          <button type="button" name="button2"></button>
-          <button type="button" name="button3"></button>
+          <button type="button" name="button1" class="game-button" id="gb1"></button>
+          <button type="button" name="button2" class="game-button" id="gb2"></button>
+          <button type="button" name="button3" class="game-button" id="gb3"></button>
         </div>
         <div class="row">
-          <button type="button" name="button4"></button>
-          <button type="button" name="button5"></button>
-          <button type="button" name="button6"></button>
+          <button type="button" name="button4" class="game-button" id="gb4"></button>
+          <button type="button" name="button5" class="game-button" id="gb5"></button>
+          <button type="button" name="button6" class="game-button" id="gb6"></button>
         </div>
         <div class="row">
-          <button type="button" name="button7"></button>
-          <button type="button" name="button8"></button>
-          <button type="button" name="button9"></button>
+          <button type="button" name="button7" class="game-button" id="gb7"></button>
+          <button type="button" name="button8" class="game-button" id="gb8"></button>
+          <button type="button" name="button9" class="game-button" id="gb9"></button>
         </div>
         <div class="new-game" id="new-game">New game?<div>
         </div>
@@ -41,8 +41,10 @@
     <aside class="player-2-area">
       <h1> Player Two </h1>
       <h2> O </h2>
-      <h3> Wins </h3>
+      <h3> # Wins </h3>
     </aside>
+  <script src="game.js"> </script>
+  <script src="player.js"> </script>
   <script src="main.js"> </script>
   </body>
 </html>
