Tic Tac Toe functional in data model

--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
       </div>
       <div class="game-board">
         <div class="row">
-          <button type="button" name="button1" class="game-button" id="gb1"></button>
-          <button type="button" name="button2" class="game-button" id="gb2"></button>
-          <button type="button" name="button3" class="game-button" id="gb3"></button>
+          <button type="button" name="button1" class="game-button" id="0"></button>
+          <button type="button" name="button2" class="game-button" id="1"></button>
+          <button type="button" name="button3" class="game-button" id="2"></button>
         </div>
         <div class="row">
-          <button type="button" name="button4" class="game-button" id="gb4"></button>
-          <button type="button" name="button5" class="game-button" id="gb5"></button>
-          <button type="button" name="button6" class="game-button" id="gb6"></button>
+          <button type="button" name="button4" class="game-button" id="3"></button>
+          <button type="button" name="button5" class="game-button" id="4"></button>
+          <button type="button" name="button6" class="game-button" id="5"></button>
         </div>
         <div class="row">
-          <button type="button" name="button7" class="game-button" id="gb7"></button>
-          <button type="button" name="button8" class="game-button" id="gb8"></button>
-          <button type="button" name="button9" class="game-button" id="gb9"></button>
+          <button type="button" name="button7" class="game-button" id="6"></button>
+          <button type="button" name="button8" class="game-button" id="7"></button>
+          <button type="button" name="button9" class="game-button" id="8"></button>
         </div>
         <div class="new-game" id="new-game">New game?<div>
         </div>
@@ -43,8 +43,8 @@
       <h2> O </h2>
       <h3> # Wins </h3>
     </aside>
-  <script src="game.js"> </script>
   <script src="player.js"> </script>
+  <script src="game.js"> </script>
   <script src="main.js"> </script>
   </body>
 </html>
