Add win conditions

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
           <button type="button" name="button8" class="game-button" id="7"></button>
           <button type="button" name="button9" class="game-button" id="8"></button>
         </div>
-        <div class="new-game" id="new-game">New game?<div>
-        </div>
+        <div class="new-game" id="new-game">New game?</div>
       </div>
     </section>
     <aside class="player-2-area">
